--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -3,4 +3,21 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Авиокомпания.</p>
+<p>Авиокомпания “Airport” ЕАД  е създадена като частен авиационен оператор през юни 2000 г. за извършване на търговски въздушни превози на пътници , товари и поща в Европа, Африка, Близък Изток и Азия.
+</p>
+
+<p>
+    Основната ни дейност е изпълнение на чартърни пътнически превози по предварително договорени с известни и авторитетни туристически компании програми за превоз на туристи.
+</p>
+
+<p>
+    Самолетите на авиокомпания “Airport” ЕАД превозват пътници до над 17 града в Германия, а също така и по дестинации в Полша, Дания, Словакия, Австрия, Израел, Чехия, Швейцария, Италия и др. 
+</p>
+
+<p>
+    За периода от създаването си досега, авиокомпания “Airport” ЕАД е изпълнила над 33 000 търговски полета, превозили сме над 8.4 милиона пътника, а самолетите ни са били във въздуха общо над 226 000 летателни часа, т.е. авиокомпанията е завоювала своята добра репутация и заема достойно място във висококонкурентния чартърен авиационен пазар.
+</p>
+
+<p>
+    От 2016 сме въвели в експлоатация 9 бр. самолети Boeing McDonell Douglas 82 и 6 бр. Airbus А320.
+</p>
