--- a/Views/Home/Contacts.cshtml
+++ b/Views/Home/Contacts.cshtml
@@ -3,4 +3,45 @@
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Контакти.</p>
+<p>Административен адрес -
+България
+
+1138 София
+
+ул. Павел Красов 35. 
+</p>
+<p>
+    БЕРЛИН -
+тел: +(49) 30 88487819
+
+тел: +(49)30 88487818
+
+email: info@euaircharter.com
+</p>
+
+<p>
+    СОФИЯ -
+тел: + (359) 2 978 7676
+
+тел: +(359) 2 979 0609
+
+email: office@euaircharter.com
+</p>
+
+<p>
+    Варна -
+тел: + (359) 52 573599
+
+тел:+ (359) 52 505092
+
+email: varops@euaircharter.com
+</p>
+
+<p>
+    БУРГАС -
+тел: + (359) 56 870295
+
+тел: + (359) 56 873133
+
+email: bojops@euaircharter.com
+</p>
