--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,5 +5,8 @@
 <div class="text-center">
     <h1 class="display-4 text-white">Добре дошли!</h1>
     <p class="text-white">Авиокомпания</p>
-    <a href="@Url.ActionLink("Index", "Tickets")" class = "btn btn-info"><i class="fa-solid fa-clock-rotate-left"></i> История на резервации</a>
+    @if (User.Identity.IsAuthenticated)
+    {
+        <a href="@Url.ActionLink("Index", "Tickets")" class = "btn btn-info"><i class="fa-solid fa-clock-rotate-left"></i> История на резервации</a>
+    }
 </div>
