--- a/Views/Tickets/Index.cshtml
+++ b/Views/Tickets/Index.cshtml
@@ -19,7 +19,7 @@ else
         <a asp-action="Create">Резервирай Билет</a>
     </p>
 }
-<table class="table">
+<table class="table bg-dark">
     <thead>
         <tr>
             <th>
